--- a/ktl/KTL Trainload Viewer.html
+++ b/ktl/KTL Trainload Viewer.html
@@ -1,4 +1,4 @@
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="./KTL Trainload Viewer_files/analytics.js" type="text/javascript"></script>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="analytics.js" type="text/javascript"></script>
 
 	
 
@@ -8,7 +8,7 @@
 	<title>KTL Trainload Viewer</title>
 	<!--Axios-->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-	<script src="./KTL Trainload Viewer_files/axios.min.js"></script>
+	<script src="axios.min.js"></script>
 	<!--Bootstrap-->
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
