--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
 <div id="map"></div>
 <script>
   // Replace "YOUR_API_KEY" with your actual API key
-  const API_KEY = process.env.API_KEY;
+  const API_KEY = 'YOUR_API_KEY_PLACEHOLDER';
 
   // Coordinates
   const startLatLng = { lat: 22.27842143101926, lng: 114.166390605818 };
