--- a/sil/sil_trainload_full.html
+++ b/sil/sil_trainload_full.html
@@ -9,19 +9,19 @@
   });
   observer.observe({type: "navigation", buffered: true});
 </script>
-<script src="./athena.js" type="text/javascript"></script>
+<script src="athena.js" type="text/javascript"></script>
 <script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app221.us.archive.org';v.server_ms=239;archive_analytics.send_pageview({});});</script>
-<script type="text/javascript" src="./bundle-playback.js" charset="utf-8"></script>
-<script type="text/javascript" src="./wombat.js" charset="utf-8"></script>
+<script type="text/javascript" src="bundle-playback.js" charset="utf-8"></script>
+<script type="text/javascript" src="wombat.js" charset="utf-8"></script>
 <script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
-<script type="text/javascript" src="./ruffle.js"></script>
+<script type="text/javascript" src="ruffle.js"></script>
 <!-- <script type="text/javascript"> -->
     <!-- __wm.init("https://web.archive.org/web"); -->
   <!-- __wm.wombat("https://mtr-viewer.rocteccloud.com/sil_trainload_full.html","20240609072557","https://web.archive.org/","web","/_static/", -->
 	      <!-- "1717917957"); -->
 <!-- </script> -->
-<link rel="stylesheet" type="text/css" href="./banner-styles.css">
-<link rel="stylesheet" type="text/css" href="./iconochive.css">
+<link rel="stylesheet" type="text/css" href="banner-styles.css">
+<link rel="stylesheet" type="text/css" href="iconochive.css">
 <!-- End Wayback Rewrite JS Include -->
 
     
@@ -30,12 +30,12 @@
     <title>SIL Train Load Viewer</title>
     <!--Axios-->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-	<script src="./axios.min.js"></script>
+	<script src="axios.min.js"></script>
 	<!--Bootstrap-->
-	<link rel="stylesheet" href="./bootstrap.min.css">
-	<script src="./bootstrap.min.js"></script>
+	<link rel="stylesheet" href="bootstrap.min.css">
+	<script src="bootstrap.min.js"></script>
 	<!--fontawesome-->
-	<link rel="stylesheet" href="./font-awesome.min.css">
+	<link rel="stylesheet" href="font-awesome.min.css">
 	<!--CSS-->
 	<style>
 	/* css variable */
